# rink-irc

./: Cargo.toml
.github/workflows/: ci.yaml  release.yaml
src/: cli.rs  config.rs  error.rs  main.rs  rink.rs
